--- a/ThreeJS/hdr/index.html
+++ b/ThreeJS/hdr/index.html
@@ -15,10 +15,10 @@
     <script src="../utils/dat/dat.gui.min.js"></script>
   </head>
   <body>
-    <main>
-      <div id="container3D"></div>
-    </main>
-
+    <div class="progress-bar-container">
+      <label for="progress-bar">Loading...</label>
+      <progress id="progress-bar" value="0" max="100"></progress>
+    </div>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
