--- a/ThreeJS/OfflineVersion/baseCoordinate/index.html
+++ b/ThreeJS/OfflineVersion/baseCoordinate/index.html
@@ -4,10 +4,12 @@
         <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <title>three.js super simple boilerplate</title>
-        <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" charset="utf-8">
     </head>
     <body>
         <script src="../libs/three.min.js"></script>
+		<script src="../libs/OrbitControls.js"></script>
         <script src="js/main.js"></script>
+		
+
     </body>
 </html>
