[ThreeJS]离线版音频可视化-音频变量

--- a/ThreeJS/_OfflineVersion/3D_Audio_Visualizer/audioVariatnIndex.html
+++ b/ThreeJS/_OfflineVersion/3D_Audio_Visualizer/audioVariatnIndex.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <title>three.js super simple boilerplate</title>
+        <title>three.js audio fft</title>
+		<input type="file" id="audioInput" accept="audio/mp3" />
         <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" charset="utf-8">
     </head>
     <body>
@@ -102,12 +103,15 @@
 			float n_xyz = mix(n_yz.x, n_yz.y, fade_xyz.x); 
 			return 2.2 * n_xyz;
 		  }
+			uniform float u_frequency;
+
 			uniform float u_time;
 			void main() {
-			  float noise = 10. * pnoise(position + u_time, vec3(10.));
-			  float displacement = noise / 40.;
-			  vec3 newPosition = position + normal * displacement;
+			  float noise = 5. * pnoise(position + u_time, vec3(10.));
 
+			  float displacement = (u_frequency / 30.) * (noise / 30.);
+
+			  vec3 newPosition = position + normal * displacement;
 			  gl_Position = projectionMatrix * modelViewMatrix * vec4(newPosition, 1.0);
 			}
 		</script>
@@ -117,6 +121,6 @@
 			  gl_FragColor = vec4(1.0);
 		  }
 		</script>
-		<script src="js/main.js"></script>
+		<script src="js/main2.js"></script>
     </body>
 </html>
