[ThreeJS]toneMapping-EquirectangularReflectionMapping 360 度全景

--- a/ThreeJS/_OfflineVersion/toneMapping-NeedHttp/index.html
+++ b/ThreeJS/_OfflineVersion/toneMapping-NeedHttp/index.html
@@ -11,4 +11,16 @@
         <script src="../libs/RGBELoader.js"></script>
         <script src="js/main.js"></script>
     </body>
+	<style>
+	  html, body {
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		height: 100%;
+	  }
+	  canvas {
+		display: block;
+	  }
+	</style>
+
 </html>
