--- a/ThreeJS/_OfflineVersion/toneMapping-NeedHttp/index.html
+++ b/ThreeJS/_OfflineVersion/toneMapping-NeedHttp/index.html
@@ -8,7 +8,8 @@
     <body>
         <script src="../libs/three.min.js"></script>
 		<script src="../libs/OrbitControls.js"></script>
-        <script src="../libs/RGBELoader.js"></script>
+        <script src="../libs/RGBELoader.js"></script>        
+		<script src="../libs/dat.gui.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 	<style>
