[ThreeJS]Car Exhibition -Lights, Shadows

--- a/ThreeJS/_OfflineVersion/[NeedHttp]car_Exhibition/index.html
+++ b/ThreeJS/_OfflineVersion/[NeedHttp]car_Exhibition/index.html
@@ -12,6 +12,7 @@
 		<script src="../libs/GLTFLoader.js"></script>
 		<script src="../libs/RGBELoader.js"></script> 
 		<script src="../libs/OrbitControls.js"></script>
+		<script src="../libs/dat.gui.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
