--- a/ThreeJS/_OfflineVersion/ModelViewer/index.html
+++ b/ThreeJS/_OfflineVersion/ModelViewer/index.html
@@ -7,7 +7,7 @@
   <body>
     <input type="file" id="fileInput" accept=".gltf,.glb" />
     <input type="file" id="hdrInput" accept=".hdr" />
-    <script src="../libs/three.min.js"></script>
+    <script src="../libs/three.js"></script>
     <script src="../libs/OrbitControls.js"></script>
     <script src="../libs/GLTFLoader.js"></script>
     <script src="../libs/RGBELoader.js"></script>
