[ThreeJS]IBL+PBR+Shader车

--- a/ThreeJS/_OfflineVersion/ModelViewer/index.html
+++ b/ThreeJS/_OfflineVersion/ModelViewer/index.html
@@ -8,6 +8,7 @@
     <input type="file" id="fileInput" accept=".gltf,.glb" />
     <input type="file" id="hdrInput" accept=".hdr" />
     <script src="../libs/three.js"></script>
+    <script src="../libs/vanilla.js"></script>
     <script src="../libs/OrbitControls.js"></script>
     <script src="../libs/GLTFLoader.js"></script>
     <script src="../libs/RGBELoader.js"></script>
