--- a/ThreeJS/_OfflineVersion/ModelViewer/index.html
+++ b/ThreeJS/_OfflineVersion/ModelViewer/index.html
@@ -7,6 +7,7 @@
   <body>
     <input type="file" id="fileInput" accept=".gltf,.glb" />
     <input type="file" id="hdrInput" accept=".hdr" />
+	<script src="../libs/dat.gui.min.js"></script>
     <script src="../libs/three.js"></script>
     <script src="../libs/vanilla.js"></script>
     <script src="../libs/OrbitControls.js"></script>
