--- a/ThreeJS/_OfflineVersion/ModelViewer/index.html
+++ b/ThreeJS/_OfflineVersion/ModelViewer/index.html
@@ -7,8 +7,32 @@
   <body>
     <input type="file" id="fileInput" accept=".gltf,.glb" />
     <input type="file" id="hdrInput" accept=".hdr" />
-	<script src="../libs/dat.gui.min.js"></script>
+	<script type="x-shader/x-vertex" id="vertexshader">
+		varying vec2 vUv;
+		void main() {
+			vUv = uv;
+			gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+		}
+
+	</script>
+
+	<script type="x-shader/x-fragment" id="fragmentshader">
+		uniform sampler2D baseTexture;
+		uniform sampler2D bloomTexture;
+		varying vec2 vUv;
+		void main() {
+			gl_FragColor = ( texture2D( baseTexture, vUv ) + vec4( 1.0 ) * texture2D( bloomTexture, vUv ) );
+		}
+	</script>
     <script src="../libs/three.js"></script>
+	<script src="../libs/shaders/CopyShader.js"></script>
+	<script src="../libs/postprocessing/Pass.js"></script>
+	<script src="../libs/shaders/LuminosityHighPassShader.js"></script>
+	<script src="../libs/postprocessing/ShaderPass.js"></script>
+	<script src="../libs/postprocessing/RenderPass.js"></script>
+	<script src="../libs/postprocessing/EffectComposer.js"></script>
+	<script src="../libs/postprocessing/UnrealBloomPass.js"></script>
+	<script src="../libs/dat.gui.min.js"></script>
     <script src="../libs/vanilla.js"></script>
     <script src="../libs/OrbitControls.js"></script>
     <script src="../libs/GLTFLoader.js"></script>
