[ThreeJS]场景切换重构

--- a/ThreeJS/_OfflineVersion/ModelViewer/index.html
+++ b/ThreeJS/_OfflineVersion/ModelViewer/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <input type="file" id="fileInput" accept=".gltf,.glb" />
-    <input type="file" id="hdrInput" accept=".hdr" />
+    <input type="file" id="hdrInput" accept=".hdr" multiple />
 	<script type="x-shader/x-vertex" id="vertexshader">
 		varying vec2 vUv;
 		void main() {
